Style changes for tab bar and fixes for scroll jumping.

--- a/components/BridalParty.css
+++ b/components/BridalParty.css
@@ -39,6 +39,12 @@
   max-width: 20%;
 }
 
+@media only screen and (max-width : 417px) {
+  .bridal-party-outer-container {
+    padding-top: 15%;
+  }
+}
+
 /* Using Columns */
 /*.bridal-party-container {
   padding: 0 10% 20% 10%;
