--- a/index.css
+++ b/index.css
@@ -196,6 +196,7 @@ body.home {
 	text-align: center;
 	flex: 1;
 	max-width: 110px;
+	max-width: 60px;
 	-webkit-flex: 1 0 auto;
 	padding: 10px 5%;
 	cursor: pointer;
@@ -278,6 +279,10 @@ body.location, body.registry {
 	width: 100%;
 }
 
+.location .top-image.fixed {
+	margin-top: 6%;
+}
+
 .location-container {
 	padding: 0 10%;
 }
@@ -349,6 +354,9 @@ body.location, body.registry {
 
 
 /* registry */
+.registry .top-image.fixed {
+	margin-top: 8%;
+}
 
 .registry-container-row {
 	width: 80%;
@@ -443,6 +451,15 @@ body.location, body.registry {
 		padding-top: 0;
 	}
 
+	.tabs {
+		padding: 0 4%;
+	}
+
+	.tabs .tab-item {
+		min-width: 90px;
+		margin: 1% 4%;
+	}
+
 	.fixed.tab-container {
 		padding-top: 20px;
 		box-shadow: 1px 1px 12px -4px;
@@ -476,6 +493,10 @@ body.location, body.registry {
 	}
 
 	/* location */
+	.location .top-image.fixed {
+		margin-top: 40%;
+	}
+
 	.location-container {
 		padding: 0 0;
 	}
@@ -504,6 +525,11 @@ body.location, body.registry {
 	.registy-container-row {
 		width: 100%;
 	}
+
+	.registry .top-image.fixed {
+		margin-top: 42%;
+	}
+
 	.registry #top-image-container {
 		width: 100%;
 		height: 25%;
